# ecom-item-embeddings

./: .gitignore  CLAUDE.md  README.md  commands.ipynb  constants.yaml  pyproject.toml
.claude/commands/: scaffold-data.md  scaffold-embedding-warmup.md  scaffold-vocab.md
data/: CLAUDE.md  dummy_brands.py  extract_dataset.py
embedding_warmup/: CLAUDE.MD  dashboard.py  train_new_embeddings.py
embedding_warmup/configs/: warmup_config.yaml
utils/: training_funcs.py
vocab/: CLAUDE.md  extend_vocabulary.py  mine_tokens.py  validate_tokenizer.py
vocab/configs/: mining_config.yaml
