[project]
name = "ecom-item-embeddings"
version = "0.1.0"
description = ""
authors = [
    {name = "Agrim Aggarwal"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "transformers (>=5.9.0,<6.0.0)",
    "torch (>=2.12.0,<3.0.0)",
    "huggingface-hub (>=1.17.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "tiktoken (>=0.13.0,<0.14.0)",
    "datasets (>=4.8.5,<5.0.0)",
    "accelerate (>=1.1.0)",
    "streamlit (>=1.58.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
agrim_modules = { git = "https://github.com/agrim-aggarwal/agrim_modules.git", branch = "main" }